# tasklr

./: README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: xvyis295jyfkn56dikvx2c0vjydqrsrm-source
tasklr/: __main__.py  cli.py
