[tool.poetry]
name = "tasklr"
version = "0.1.0"
description = "create tasks"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/tasklr"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"

[tool.poetry.scripts]
tasklr = "tasklr.cli:main"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
